# switch

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  run.sh
switch/: __init__.py  __main__.py
switch/cli/: __init__.py  applescript.py  download.py  exec.py  ftpserver.py  magick.py  noop.py  optimize.py  pdf_to_ps.py  plating.py  upload.py
switch/utils/: applescript.py  binaries.py  files.py  run.py  uuid.py
