[project]
name = "switch"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "riccardodivirgilio", email = "riccardodivirgilio@gmail.com" }
]
dependencies = ["click==8.2.1"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"